# graphene_mongo_xtras_flask_demo

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  mongo-init.sh  mongo.env  mongo_express.env
docs/: conf.py  graphene_mongo_xtras_flask_demo.rst  hello_world.rst  index.rst
flask/: Dockerfile  api.ini  entrypoint.sh  pyproject.toml
flask/graphene_mongo_xtras_flask_demo/: __init__.py  app.py  schema.py
flask/graphene_mongo_xtras_flask_demo/models/: mongo_models.py  sql_models.py
flask/graphene_mongo_xtras_flask_demo/mutations/: mongo_example.py  sql_example.py
flask/graphene_mongo_xtras_flask_demo/queries/: mongo_example.py  sql_example.py
flask/graphql_default_queries/: add_user.graphql  get_filtered_users.graphql
flask/tests/: test_graphene_mongo_xtras_flask_demo.py  test_hello_world.py
