[tool.poetry]
name = "graphene_mongo_xtras_flask_demo"
version = "0.1.0"
description = "Graphene Mongoengine Filtering Flask Demo"
authors = ["Scott Robertson <scott@scott-rbrtsn.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-GraphQL = "^2.0.1"
SQLAlchemy = "^1.3.19"
graphene_sqlalchemy = "^2.3.0"
graphene-mongo = "^0.2.13"
mongoengine = "^0.23.0"
flask-mongoengine = "^1.0.0"
pyhumps = "^3.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
snapshottest = "^0.5.1"
pytest-cov = "^2.10.0"
pytest-flake8 = "^1.0.6"
pytest-bandit = "^0.5.2"
isort = "^5.0.4"
black = "^19.10b0"
pytest-black = "^0.3.10"
pytest-logger = "^0.5.1"
loguru = "^0.5.1"
coverage-badge = "^1.0.1"
sphinx = "^3.1.2"
recommonmark = "^0.6.0"
sphinx_rtd_theme = "^0.5.0"
sphinxcontrib-napoleon = "^0.7"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
